# Pool-Controller

./: .gitignore  README.md  introduction.md
Tools/: README.md  get_ids.md  get_ids.py
Tools/Rust/: .gitignore  Cargo.toml  get_ids.md
Tools/Rust/src/: entities.rs  main.rs  noise_connection.rs  protobuf.rs  web_gen.rs
Tools/Zig/: .gitignore  build.zig  get_ids.md
Tools/Zig/src/: main.zig
components/: README.md
components/custom_web_handler/: README.md  __init__.py  custom_web_handler.cpp  custom_web_handler.h
components/pentair_if_ic/: README.md  __init__.py  binary_sensor.py  pentair_if_ic.cpp  pentair_if_ic.h  sensor.py  text_sensor.py
components/pentair_if_ic/number/: __init__.py  swg_percent_number.cpp  swg_percent_number.h
components/pentair_if_ic/switch/: __init__.py  takeover_mode_switch.cpp  takeover_mode_switch.h
esphome/: README.md  pool-controller.yaml
esphome/Include/: chlorinator.yaml  pentair_light.yaml  schedule.yaml  temperature.yaml
web-dashboard/: README.md  WEB_README.md  build-bundle.js  inject-timestamp.js  package-lock.json  package.json
web-dashboard/public/: app.js  index.html  styles.css
web-dashboard/public/backup/: index.html
web-dashboard/src/: esphome-api.ts  examples.ts  index.ts  server.ts  types.ts
web-dashboard/src/api/: README.md  base.ts  chlorinator.ts  index.ts  pool-light.ts  pump.ts  system.ts  temperature.ts
