[package]
name = "get-ids"
version = "0.1.0"
edition = "2021"
description = "ESPHome Entity ID Retriever - connects to ESPHome devices via Native API with Noise encryption"

[[bin]]
name = "get_ids"
path = "src/main.rs"

[dependencies]
snow = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
